src/test/deca/syntax/parser/valid/method_call_args_class.deca
// Parser test, methode call with a class as parameter

class Test {
    boolean testMethod(float x, float y) {
        return (x > y);
    }
    boolean testMethod2(float x, float y) {
        return (x >= y);
    }
    boolean testMethod3(float x, float y) {
        return (x < y);
    }
    boolean testMethod4(float x, float y) {
        return (x <= y);
    }
    boolean testMethod5(float x, float y) {
        return (x == y);
    }

    boolean proxyMethod(float x, float y){
        return this.testMethod1(x, y);
    }
}


{
    boolean a;
    Test test = new Test();
    a = test.testMethod1(1.8, 3.5);
    a = test.testMethod2(1.8, 3.5);
    a = test.testMethod3(1.8, 3.5);
    a = test.testMethod4(1.8, 3.5);
    a = test.testMethod5(1.8, 3.5);

    if (test.testMethod1(1.8, 3.5)){
        print("Okay");
    }
}

