src/test/deca/syntax/parser/invalid/ineq_expr_assign.deca
// Parser test, condition in "if" with an unavailable operator

int x = 5;
int y = 8;
if (x = y) {
    println("x est égal à y");
} else {
    println("x est différent de y");
}